--- a/packages/font/local/target.css
+++ b/packages/font/local/target.css
@@ -1,1 +1,13 @@
 /* target file for webpack loader */
+body{
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+    background-image: url('illu.gif');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+    width: 100%;
+    height: 600px;
+  }
+  
